# HomeCage

./: .gitignore  INVESTIGATION.md  QUICK_MIUI_SETUP_RU.md  README.md  README_es.md  README_ja.md  README_ru.md  README_zh-CN.md  keystore.properties.example  settings.gradle.kts
.github/workflows/: ci.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/homecage/kiosk/: KioskApplication.kt  MainActivity.kt
app/src/main/java/com/homecage/kiosk/admin/: KioskDeviceAdminReceiver.kt  KioskPolicyManager.kt
app/src/main/java/com/homecage/kiosk/data/: AppRepository.kt  KioskPreferences.kt  QuickCallContact.kt  RestrictionMode.kt  RestrictionScheduleRule.kt  SecurityEventReport.kt  SecurityTrailEntry.kt
app/src/main/java/com/homecage/kiosk/locale/: AppLocaleManager.kt
app/src/main/res/drawable/: ic_launcher_background.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: kiosk_accessibility_service.xml
homeassistant/: README.md
homeassistant/custom_components/homecage/: __init__.py  api.py  config_flow.py  const.py  sensor.py  strings.json  switch.py  text.py
homeassistant/custom_components/homecage/translations/: en.json
server/: .env.example  README.md  install-service.sh  pyproject.toml
server/app/: __init__.py  main.py
(+13 files in other folders)
