[project]
name = "homecage-server"
version = "0.1.0"
description = "Local web admin and config API for HomeCage"
requires-python = ">=3.11"
dependencies = [
    "litestar[standard]>=2.13,<3.0",
    "paho-mqtt>=2.1,<3.0",
]

[project.scripts]
homecage-server = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
